syntax="proto3";

package proto;
import "product_type.proto";

// 请求参数
message ProductRequest{
    string pid=1;
}

// 返回参数
message ProductResponse{
    string        pid       = 1;
    Status        status    = 2;
    repeated User users     = 3;        // 如果非同包，需要跟上包名称
}

service Product{
    rpc GetProduct(ProductRequest)returns(ProductResponse){}
}

